# chatmail-prober

./: .gitignore  .gitmodules  260305-plan.md  Makefile  README.md  TECHNICAL.md  pyproject.toml  relay_speedtest.md  relay_speedtest.txt  relays.txt.example
chatmail_prober/: __main__.py  accounts.py  cli_summary.py  errors.py  imap_metadata.py  iroh.py  log_config.py  metrics.py  orchestration.py  output.py  pinger.py  pool.py  probe.py  prober.py  rpc.py  turn.py  turn_parse.py
grafana/: README.md  build_turn_dashboard.py  dashboard-inter.json  dashboard-intra.json  dashboard-single.json  dashboard-turn.json  dashboard.json  smokeping_panel.py
scripts/: cleanup_accounts.py  migrate_accounts.py  smoke_check.py  turn_textfile_collector.py
systemd/: chatmail-prober-prom-copy.path  chatmail-prober-prom-copy.service  chatmail-prober.service
tests/: conftest.py  test_accounts.py  test_cli_summary.py  test_cli_summary_table.py  test_failure_taxonomy.py  test_hosts_flag.py  test_imap_metadata.py  test_io.py  test_ip_relay.py  test_iroh.py  test_latency_distributions.py  test_live.py  test_log_config.py  test_log_config_internals.py  test_main.py  test_main_orchestration.py  test_metrics.py  test_optional_relay_file.py  test_output.py  test_phase_tracking.py  test_pinger.py  test_pool.py  test_print_flag.py  test_print_metrics.py  test_probe.py  test_prober.py  test_prober_rpc_errors.py  test_prober_timeouts.py  test_reset.py  test_rpc_keyword_guard.py  test_rpc_ready_filter.py  test_structlog_context.py  test_structured_log_fields.py  test_supr_rpc_filter.py  test_thread_leak.py  test_turn.py  test_unreachable.py
