[project]
name = "chatmail-prober"
dynamic = ["version"]
description = "Smokeping-style Prometheus exporter for chatmail relay interoperability monitoring"
requires-python = ">=3.10"
dependencies = [
    "prometheus-client>=0.20",
    "structlog>=24.0",
    "deltachat-rpc-client>=2.44.0",
    "deltachat-rpc-server>=2.44.0",
]


[project.scripts]
chatmail-prober = "chatmail_prober.__main__:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "chatmail_prober/_version.py"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.ruff]
lint.select = [
    "F",   # Pyflakes
    "I",   # isort
    "PLC", # Pylint Convention
    "PLE", # Pylint Error
    "PLW", # Pylint Warning
]

[tool.pytest.ini_options]
addopts = "-v -ra --strict-markers -p no:deltachat_rpc_client.pytestplugin"
